--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sample-ecommerce-api",
-  "version": "1.0.0",
-  "description": "Sample e-commerce API for DevSecOps ML Demo",
+  "version": "2.0.0-risky",
+  "description": "Risky deployment with security issues",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.18.2"
   },
-  "author": "Shivendra Singh",
-  "license": "MIT"
+  "devDependencies": {
+    "lodash": "4.17.4"
+  }
 }
